--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -433,8 +433,8 @@ const copyText = document.getElementById('copyText1')
 
 copyBtn1.onclick = () => {
   copyText.select();    // Selects the text inside the input
-  //document.execCommand('copy');
-  navigator.clipboard.writeText(copyText.value);  }
+  document.execCommand('copy');
+  //navigator.clipboard.writeText(copyText.value);  }
 </script>
 
 
