--- a/templates/database_arrival.html
+++ b/templates/database_arrival.html
@@ -181,6 +181,14 @@
                   </div>
                 </div>
               </div>
+              {%for category, message in get_flashed_messages(with_categories=True)%}
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>Request Failed !!</strong>
+                <br>{{message}} <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              {%endfor%}
             </form>
           </div>
         </div>
