--- a/templates/database_arrival.html
+++ b/templates/database_arrival.html
@@ -182,11 +182,15 @@
                 </div>
               </div>
               {%for category, message in get_flashed_messages(with_categories=True)%}
-              <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <strong>Request Failed !!</strong>
-                <br>{{message}} <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+              <div class="row">
+                <div class="col-lg-2 col-md-4">
+                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Request Failed !!</strong>
+                    <br>{{message}} <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                </div>
               </div>
               {%endfor%}
             </form>
