--- a/templates/database_arrival.html
+++ b/templates/database_arrival.html
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-2 float-right">
+                <div class="col-lg-2 float-right mb-4">
                   <label for="Input"></label>
                   <div class="btn-group w-100">
                     <button type="submit" class="btn btn-success col start">
@@ -181,18 +181,18 @@
                   </div>
                 </div>
               </div>
-              {%for category, message in get_flashed_messages(with_categories=True)%}
               <div class="row">
-                <div class="col-lg-2 col-md-4">
+                <div class="col-lg-4 col-md-4">
                   <div class="alert alert-danger alert-dismissible fade show" role="alert">
                     <strong>Request Failed !!</strong>
+                    {%for category, message in get_flashed_messages(with_categories=True)%}
                     <br>{{message}} <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    {%endfor%}
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                 </div>
               </div>
-              {%endfor%}
             </form>
           </div>
         </div>
