--- a/templates/database_arrival.html
+++ b/templates/database_arrival.html
@@ -181,18 +181,22 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-lg-4 col-md-4">
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Request Failed !!</strong>
-                    {%for category, message in get_flashed_messages(with_categories=True)%}
-                    <br>{{message}} <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    {%endfor%}
-                      <span aria-hidden="true">&times;</span>
-                    </button>
+              {% with messages = get_flashed_messages(category_filter=["fail"]) %}
+                {% if messages %}
+                  {% for message in messages %}
+                  <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>Request Failed !!</strong>
+                        <br>Please Check Local Server Connection !!<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                    </div>
                   </div>
-                </div>
-              </div>
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
             </form>
           </div>
         </div>
