--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -29,7 +29,7 @@
   <!-- Main content -->
   <section class="content">
     <div class="container-fluid">
-      
+      {% if ping == 0 %}
       <div class="row">
         <div class="col-lg-5">
           <div class="card col-12">
@@ -155,8 +155,22 @@
             </div>
           </div>
         </div>
-        
       </div>
+      {%endif%}
+
+
+      {% if ping != 0 %}
+      <div class="row">
+        <div class="col-lg-4 col-md-4">
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Request Failed !!</strong>
+            <br>Local seiscomp server off !!<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      {%endif%}
     </div><!--/. container-fluid -->
   </section>
   <!-- /.content -->
