--- a/templates/download_waveform.html
+++ b/templates/download_waveform.html
@@ -29,6 +29,7 @@
   <!-- Main content -->
   <section class="content">
     <div class="container-fluid">
+      {% if ping == 0 %}
       <div class="row">
         <div class="card col-12">
           <div class="card-header">
@@ -87,6 +88,20 @@
           </div>
         </div>
       </div>
+      {%endif%}
+
+      {% if ping != 0 %}
+      <div class="row">
+        <div class="col-lg-4 col-md-4">
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Connection Failed !!</strong>
+            <br>Local seiscomp server off !!<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      {%endif%}
 
       
     </div><!--/. container-fluid -->
