--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -424,7 +424,7 @@
   var map = L.map('map').setView([{{ koord[0] }},{{ koord[1] }}], 7);
   var icon_epic_last = L.icon({iconUrl: '{{ url_for('static', filename='gempa.png') }}', iconSize: [40,40]});
   var icon_epic = L.icon({iconUrl: 'http://inatews.bmkg.go.id/generate_peta/images/new/circle-red-10.png', iconSize: [15,15]});
-  var marker = L.marker([{{ koord[0] }},{{ koord[1] }}], {icon: icon_epic_last}).addTo(map).bindPopup("<p>{% print(infogb[0]) %}</p>");
+  var marker = L.marker([{{ koord[0] }},{{ koord[1] }}], {icon: icon_epic_last}).addTo(map).bindPopup("<p><b>{% print(infogb[0]) %}</b></p>");
   marker.on('mouseover',function(ev) {
     marker.openPopup();});
   L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Street_Map/MapServer/tile/{z}/{y}/{x}', {
