--- a/templates/mainpage1.html
+++ b/templates/mainpage1.html
@@ -163,6 +163,20 @@
                         {% endif %}
                       {% endwith %}
 
+
+                      {% with messages = get_flashed_messages(category_filter=["already"]) %}
+                        {% if messages %}
+                          {% for message in messages %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                              <strong>WARNING !!</strong>
+                              <br>Data Gempabumi Sudah Ada !!<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                          {% endfor %}
+                        {% endif %}
+                      {% endwith %}
+
                       
 
                       {% if submit %}
