--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -122,6 +122,9 @@
                       <option>IHMI</option>
                       <option>JHMI</option>
                       <option>PMMI</option>
+                      <option>MSHHI</option>
+                      <option>WSHHI</option>
+                      <option>TBMUI</option>
                     </select>
                   </div>
                   <div class="col-1">
