--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -125,6 +125,7 @@
                       <option>MSHHI</option>
                       <option>WSHHI</option>
                       <option>TBMUI</option>
+                      <option>BDMUI</option>
                     </select>
                   </div>
                   <div class="col-1">
