--- a/templates/sensor_stat.html
+++ b/templates/sensor_stat.html
@@ -126,6 +126,7 @@
                       <option>WSHHI</option>
                       <option>TBMUI</option>
                       <option>BDMUI</option>
+                      <option>MUMUI</option>
                     </select>
                   </div>
                   <div class="col-1">
