--- a/templates/base.html
+++ b/templates/base.html
@@ -200,6 +200,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="/sensor/quality" class="nav-link {% block nav_sensorqual %} {% endblock %}">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Sensor Quality (PPSD)</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="{{ url_for('waveformbyevent') }}" class="nav-link {% block nav_waveformbyevent %} {% endblock %}">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Waveform by Event</p>
