--- a/templates/tabel_ekin.html
+++ b/templates/tabel_ekin.html
@@ -87,6 +87,10 @@
                     <th style="width: 140px;">RMS</th>
                     <th style="width: 140px;">Az. Gap</th>
                     <th style="width: 140px;">Phase</th>
+                    <th style="width: 140px;">Lat (+/-) (Km)</th>
+                    <th style="width: 140px;">Lon (+/-) (Km)</th>
+                    <th style="width: 140px;">Depth (+/-) (Km)</th>
+                    <th style="width: 140px;">Min. Distance (Km)</th>
                     <th style="width: 140px;">Sent Time (Minutes)</th>
                   </tr>
                   </thead>
@@ -104,6 +108,10 @@
                       <td>{{par.8}}</td>
                       <td>{{par.9}}</td>
                       <td>{{par.10}}</td>
+                      <td>{{par.12}}</td>
+                      <td>{{par.13}}</td>
+                      <td>{{par.14}}</td>
+                      <td>{{par.15}}</td>
                       <td>{{par.11}}</td>
                       
                     </tr>
