--- a/templates/tabel_ekin.html
+++ b/templates/tabel_ekin.html
@@ -90,7 +90,7 @@
                     <th style="width: 140px;">Lat (+/-) (Km)</th>
                     <th style="width: 140px;">Lon (+/-) (Km)</th>
                     <th style="width: 140px;">Depth (+/-) (Km)</th>
-                    <th style="width: 140px;">Min. Distance (Km)</th>
+                    <th style="width: 140px;">Min. Distance (deg)</th>
                     <th style="width: 140px;">Sent Time (Minutes)</th>
                   </tr>
                   </thead>
